--- a/src/components/navigation/Navigation.css
+++ b/src/components/navigation/Navigation.css
@@ -7,7 +7,7 @@
   font-size: 1.5rem;
   text-decoration: none;
   transition: opacity 0.15s ease-in;
-  color: #eeeeee;
+  color: #0d7377;
   padding: 0.5rem;
 }
 
