--- a/src/components/signIn/SignIn.css
+++ b/src/components/signIn/SignIn.css
@@ -1,5 +1,9 @@
 .signin-section {
-  background-color: rgba(13, 115, 119, 0.4);
+  background: linear-gradient(
+    90deg,
+    rgba(50, 224, 196, 0.6) 35%,
+    rgba(13, 115, 119, 0.6) 100%
+  );
   border: solid 1px #212121;
   border-radius: 4px;
   margin: 4rem auto;
@@ -37,6 +41,7 @@
   border: none;
   border-radius: 4px;
   padding: 0.25rem;
+  border: solid 1px #212121;
 }
 
 .input-signin-section:focus {
@@ -82,7 +87,7 @@
 .recover-items {
   font-size: 0.825rem;
   margin: 0.25rem auto;
-  color: #eeeeee;
+  color: #212121;
   transition: 0.25s ease-in-out;
   cursor: pointer;
   text-align: center;
